tests/fixtures/invalid/type_errors/function_arg_mismatch.luma
-- Function argument type mismatch
let double = fn(x: Number): Number do
    return x * 2
end

double("not a number")
